2005-11-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/SwingUtilities.java:
	(replaceUIActionMap): Stop climbing hierarchy once we've found an 
	ActionMapUIResource, don't keep looking until parent is null.  No need
	to check if child is null.
	(replaceUIInputMap): Use a local variable for the parent rather than 
	3 calls to get parent.  No need to check if child is null.
	* javax/swing/plaf/basic/BasicListUI.java:
	* javax/swing/plaf/basic/BasicTableUI.java:
	* javax/swing/plaf/basic/BasicTreeUI.java:
	(installKeyboardActions): UI ActionMap should be of type 
	ActionMapUIResource, not just ActionMap.

2005-11-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java:
	(ElementBuffer.clone): New API method.

2005-11-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/lang/String.java:
	(replace): Use a StringBuilder instead of a StringBuffer because this 
	is faster and we don't need thread-safety.

2005-11-08  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTextUI.java
	(installDefaults): Initialize background field correctly.

2005-11-08  Roman Kennke  <kennke@aicas.com>

	* java/awt/BorderLayout.java
	(getAlignmentX): Return 0.5F here.
	(getAlignmentY): Return 0.5F here.

2005-11-08  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JRootPane.java
	(RootLayout.glassPaneBounds): New field.
	(RootLayout.layeredPaneBounds): New field.
	(RootLayout.contentPaneBounds): New field.
	(RootLayout.menuBarBounds): New field.
	(RootLayout.prefSize): New field.
	(getLayoutAlignmentX): Return 0.0F here.
	(getLayoutAlignmentY): Return 0.0F here.
	(invalidateLayout): Throw away cached layout information.
	(layoutContainer): Simplified and fixed the layout. Use cache if
	possible.
	(preferredLayoutSize): Simplified and fixed the layout. Use cache if
	possible.

2005-11-08  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(alignmentX): Changed default value to -1.0.