@@ -98,16 +98,9 @@ public class InvocationEvent extends AWTEvent implements ActiveEvent
   protected boolean catchExceptions;
 
   /**
-   * This is the caught exception thrown in the <code>run()</code> method. It
-   * is null if exceptions are ignored, the run method hasn't completed, or
-   * there were no exceptions.
-   *
-   * @serial the caught exception, if any
-   */
-  private Exception exception;
-
-  /**
    * This is the caught Throwable thrown in the <code>run()</code> method.
+   * It is null if throwables are ignored, the run method hasn't completed, 
+   * or there were no throwables thrown.
    */
   private Throwable throwable;
   
@@ -191,8 +184,6 @@ public class InvocationEvent extends AWTEvent implements ActiveEvent
       catch (Throwable t)
         {
           throwable = t;
-          if (t instanceof Exception)
-            exception = (Exception)t;
         }
     else
       runnable.run();
@@ -214,7 +205,9 @@ public class InvocationEvent extends AWTEvent implements ActiveEvent
    */
   public Exception getException()
   {
-    return exception;
+    if (throwable == null || !(throwable instanceof Exception))
+      return null;
+    return (Exception) throwable;
   }
 
   /**
@@ -222,6 +215,7 @@ public class InvocationEvent extends AWTEvent implements ActiveEvent
    * Null if none was thrown or if this InvocationEvent doesn't catch
    * throwables.
    * @return the caught Throwable
+   * @since 1.5
    */
   public Throwable getThrowable()
   {
